--- a/public/client/styles.css
+++ b/public/client/styles.css
@@ -1,5 +1,6 @@
-body {
-  background: url('https://source.unsplash.com/random/1600x900') no-repeat 50% 50% fixed;
+#splashview {
+  height:100vh;
+  background: url('https://source.unsplash.com/random/1600x900') no-repeat 50% 50% ;
   background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
