--- a/public/client/styles.css
+++ b/public/client/styles.css
@@ -10,3 +10,8 @@
     background-color: #CCCCCC;
     border-bottom: 1px solid white !important;
 }
+
+.mdl-badge[data-badge]:after {
+    top: 3px !important;
+    right: 1px !important;
+}
