Added styling to collection info and view.

--- a/public/client/styles.css
+++ b/public/client/styles.css
@@ -15,3 +15,15 @@
     top: 3px !important;
     right: 1px !important;
 }
+
+.info-bar {
+    z-index: 20;
+}
+
+.image-collection {
+    z-index: 10;
+}
+
+body {
+    overflow-x: hidden;
+}
