--- a/public/client/styles.css
+++ b/public/client/styles.css
@@ -42,3 +42,20 @@ body {
     margin-top: -28px;
     margin-left: 43px;
 }
+
+.sidebar-link {
+    text-decoration: none;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.sidebar-link .material-icons {
+    margin: 5px 3px 0 11px !important;
+}
+
+.sidebar-link div {
+    font-size: .9em;
+    margin-top: -27px;
+    margin-left: 43px;
+    margin-bottom: 45px;
+}
